- Can show Card Info by clicking from the unit circles 
- Can show Card Info by clicking from the damage zone 
- Can show Card Info by clicking from the card list 
- Created CardList HUD for list of cards
- Created CardInfo HUD for card info
- AI can be loaded on exported APK
- Removed Screen related Gui input handling to reduce headaches and utilize Godot's emulate mouse from touch
- Created QueryActivateSkillStrategy
- Removed ManualAI implementation
- Perform Counter Blast by holding the cards from DamageZone
- Updated Board Indicator to be stackable for temporary indications 
- Added Board Indicator for Guarding
- Separated Panel from CardListPanel
- Implemented Soul Blast
- Implemented Selecting Opp rearguard for Retire effect
- Implemented Selecting card from Deck for skills
- Implemented selecting own unit circle for skills (Completed Superior call)

v.0001 Duel Creatures
- Created Placeholder card
- Designed Player Board (Good for android)
- Card Factory and Some Assets
- Utilize Session and InputProvider
- Initial Board state (Except Guard Zone)
- Initial HUD for mulligan
- Shows first draw
- Implemented player mulligan
- Created SelectCardsFromHand input
- Implemented opponent AI Mulligan
- Implemented Player Ride phase
- Base writing Player Main Phase
- Created CardBaseComponent to refactor code
- Cleaned up all nullable warnings
- Rearguard and Hand handling of Card Draggable state
- Fixed MulliganPhase dragging where you cannot drag on top of already selected cards
- Implemented Swap rearguards
- Implemented AI Ride
- AI just skips main phase and attack phase (temporary)
- Strengthen Inputs (Noticed lag upon calling vanguard)
- Added board logging for easy debugging
- Simplified Input types for UnitCircle via ComponentUnitState enum 
- Detect boosted attack and cancellable
- Added Manual AI Guard method
- Implemented Damage Zone reflecting Damage
- Grade, Power and Critical labels
- Added TriggerZoneArea
- Added CardScale for CardContainers