@@ -1,7 +1,32 @@
-[gd_scene load_steps=3 format=3 uid="uid://b4ogsmqyb7phr"]
+[gd_scene load_steps=5 format=3 uid="uid://b4ogsmqyb7phr"]
 
 [ext_resource type="PackedScene" uid="uid://b3rw6rjka7eon" path="res://Card/Card.tscn" id="1_uvjtr"]
 [ext_resource type="Script" uid="uid://bo34fh6nunsrb" path="res://Card/VanguardCardComponent.cs" id="2_kdthh"]
+[ext_resource type="Texture2D" uid="uid://pa8cxhggayht" path="res://Assets/Triggers/Draw.png" id="3_kdthh"]
+
+[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kdthh"]
 
 [node name="Card" instance=ExtResource("1_uvjtr")]
 script = ExtResource("2_kdthh")
+
+[node name="TriggerPanel" type="PanelContainer" parent="Border" index="4"]
+unique_name_in_owner = true
+visible = false
+layout_mode = 1
+anchors_preset = 1
+anchor_left = 1.0
+anchor_right = 1.0
+offset_left = -70.0
+offset_top = 10.0
+offset_right = -10.0
+offset_bottom = 70.0
+grow_horizontal = 0
+theme_override_styles/panel = SubResource("StyleBoxEmpty_kdthh")
+
+[node name="TriggerRect" type="TextureRect" parent="Border/TriggerPanel" index="0"]
+unique_name_in_owner = true
+custom_minimum_size = Vector2(80, 80)
+layout_mode = 2
+texture = ExtResource("3_kdthh")
+expand_mode = 1
+stretch_mode = 5
