@@ -26,6 +26,7 @@ v.0002 Skills and Trigger selection
 - Implemented Selecting Opp rearguard for Retire effect
 - Implemented Selecting card from Deck for skills
 - Implemented selecting own unit circle for skills (Completed Superior call)
+- Implemented Draw Trigger
 
 v.0001 Duel Creatures
 - Created Placeholder card
